package aitu.sdp.assignment2.abstractfactory.ui;

/** Concrete product of the macOS family. */
public final class MacOSButton implements Button {

    @Override
    public String paint() {
        return "Rendering macOS button";
    }
}
